--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>01</span>About natous</a>
+            <a href="#" class="navigation__link"
+              ><span>01</span>About natours</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>02</span>Your benfits</a>
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
           </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link"
@@ -474,8 +478,8 @@
             Copyright &copy; by Jonas Schmedtmann.
           </p>
           <p class="footer__copyright">
-            Completed this coding project in course and added additional edits
-            and modifications by FRANK PECHAR.
+            Completed this coding project in this course and then added
+            additional edits and modifications - by Frank Pechar.
           </p>
         </div>
       </div>
@@ -502,14 +506,6 @@
             odio facilisis mauris sit amet massa vitae. Mi bibendum neque
             egestas congue. Placerat orci nulla pellentesque dignissim enim sit.
             Vitae semper quis lectus nulla at volutpat diam ut venenatis.
-            Malesuada pellentesque elit eget gravida cum sociis natoque
-            penatibus et. Proin fermentum leo vel orci porta non pulvinar neque
-            laoreet. Gravida neque convallis a cras semper. Molestie at
-            elementum eu facilisis sed odio morbi quis. Faucibus vitae aliquet
-            nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet
-            sit. Amet massa vitae tortor condimentum lacinia quis vel eros
-            donec. Sit amet facilisis magna etiam. Imperdiet sed euismod nisi
-            porta.
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
