--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-
+    <script defer src="./js/script.js"></script>
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
 
@@ -31,25 +31,29 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-about-id" class="navigation__link"
               ><span>01</span>About natours</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-features-id" class="navigation__link"
               ><span>02</span>Your benefits</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"
+            <a href="#section-tours-id" class="navigation__link"
               ><span>03</span>Popular tours</a
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+            <a href="#section-stories-id" class="navigation__link"
+              ><span>04</span>Stories</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>05</span>Book now</a>
+            <a href="#section-book-id" class="navigation__link"
+              ><span>05</span>Book now</a
+            >
           </li>
         </ul>
       </nav>
@@ -73,7 +77,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section id="section-about-id" class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
@@ -131,7 +135,7 @@
         </div>
       </section>
 
-      <section class="section-features">
+      <section id="section-features-id" class="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
@@ -187,7 +191,7 @@
         </div>
       </section>
 
-      <section class="section-tours" id="section-tours">
+      <section id="section-tours-id" class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -292,7 +296,7 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section id="section-stories-id" class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -362,7 +366,7 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section id="section-book-id" class="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -493,7 +497,7 @@
         </div>
         <div class="popup__right">
           <a href="#section-tours" class="popup__close">&times;</a>
-          <h2 class="heading-secondary u-margin-bottom-small">
+          <h2 class="heading-secondary popup-heading u-margin-bottom-small">
             Start booking now
           </h2>
           <h3 class="heading-tertiary u-margin-bottom-small">
@@ -504,8 +508,7 @@
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
             risus pretium quam. Aliquam sem et tortor consequat id. Volutpat
             odio facilisis mauris sit amet massa vitae. Mi bibendum neque
-            egestas congue. Placerat orci nulla pellentesque dignissim enim sit.
-            Vitae semper quis lectus nulla at volutpat diam ut venenatis.
+            egestas congue.
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
