Enhancements rotating card and modal formatting

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 </h4>
                 <div class="card__details">
                   <ul>
+                    <li>GREAT VALUE &rarr;</li>
                     <li>3 Day tours</li>
                     <li>Up to 30 people</li>
                     <li>2 Tour guides</li>
@@ -239,6 +240,7 @@
                 </h4>
                 <div class="card__details">
                   <ul>
+                    <li>GREAT VALUE &rarr;</li>
                     <li>7 Day tours</li>
                     <li>Up to 40 people</li>
                     <li>6 Tour guides</li>
@@ -270,6 +272,7 @@
                 </h4>
                 <div class="card__details">
                   <ul>
+                    <li>GREAT VALUE &rarr;</li>
                     <li>5 Day tours</li>
                     <li>Up to 15 people</li>
                     <li>3 Tour guides</li>
@@ -510,7 +513,7 @@
             odio facilisis mauris sit amet massa vitae. Mi bibendum neque
             egestas congue.
           </p>
-          <a href="#" class="btn btn--green">Book now</a>
+          <a href="#section-book-id" class="btn btn--green">Book now</a>
         </div>
       </div>
     </div>
