--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
                 </h4>
                 <div class="card__details">
                   <ul>
-                    <li>GREAT VALUE &rarr;</li>
+                    <li>
+                      <span>GREAT VALUE</span>
+                      <span>&rarr;</span>
+                    </li>
                     <li>3 Day tours</li>
                     <li>Up to 30 people</li>
                     <li>2 Tour guides</li>
@@ -240,7 +243,10 @@
                 </h4>
                 <div class="card__details">
                   <ul>
-                    <li>GREAT VALUE &rarr;</li>
+                    <li>
+                      <span>GREAT VALUE</span>
+                      <span>&rarr;</span>
+                    </li>
                     <li>7 Day tours</li>
                     <li>Up to 40 people</li>
                     <li>6 Tour guides</li>
@@ -272,7 +278,10 @@
                 </h4>
                 <div class="card__details">
                   <ul>
-                    <li>GREAT VALUE &rarr;</li>
+                    <li>
+                      <span>GREAT VALUE</span>
+                      <span>&rarr;</span>
+                    </li>
                     <li>5 Day tours</li>
                     <li>Up to 15 people</li>
                     <li>3 Tour guides</li>
