Changes to modal

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#section-tours" class="btn btn--white btn--animated"
+        <a href="#section-tours-id" class="btn btn--white btn--animated"
           >Discover our tours</a
         >
       </div>
@@ -103,7 +103,7 @@
               provident modi obcaecati iste, reiciendis.
             </p>
 
-            <a href="#" class="btn-text">Learn more &rarr;</a>
+            <a href="#section-tours-id" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
@@ -304,7 +304,9 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn btn--green">Discover all tours</a>
+          <a href="#section-tours-id" class="btn btn--green"
+            >Discover all tours</a
+          >
         </div>
       </section>
 
@@ -374,7 +376,9 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn-text">Read all stories &rarr;</a>
+          <a href="#section-stories-id" class="btn-text"
+            >Read all stories &rarr;</a
+          >
         </div>
       </section>
 
@@ -503,27 +507,21 @@
 
     <div class="popup" id="popup">
       <div class="popup__content">
-        <div class="popup__left">
-          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
-          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
-        </div>
-        <div class="popup__right">
-          <a href="#section-tours" class="popup__close">&times;</a>
-          <h2 class="heading-secondary popup-heading u-margin-bottom-small">
-            Start booking now
-          </h2>
-          <h3 class="heading-tertiary u-margin-bottom-small">
-            Important &ndash; Please read these terms before booking
-          </h3>
-          <p class="popup__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-            risus pretium quam. Aliquam sem et tortor consequat id. Volutpat
-            odio facilisis mauris sit amet massa vitae. Mi bibendum neque
-            egestas congue.
-          </p>
-          <a href="#section-book-id" class="btn btn--green">Book now</a>
-        </div>
+        <h2 class="heading-secondary popup-heading u-margin-bottom-small">
+          Start booking now
+        </h2>
+        <a href="#section-tours" class="popup__close">&times;</a>
+        <h3 class="heading-tertiary u-margin-bottom-small">
+          Important &ndash; Please read these terms before booking
+        </h3>
+        <p class="popup__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
+          risus pretium quam. Lorem ipsum dolor, sit amet consectetur
+          adipisicing elit. Iste ad quisquam dolorem nobis aut, libero, omnis
+          nisi mollitia.
+        </p>
+        <a href="#section-book-id" class="btn btn--green">Book now</a>
       </div>
     </div>
   </body>
