--- a/index.html
+++ b/index.html
@@ -492,14 +492,12 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for
-            his online course
-            <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-            Copyright &copy; by Jonas Schmedtmann.
+            Copyright &copy; - Built by Jonas Schmedtmann for his online course
+            Advanced CSS and SASS.
           </p>
           <p class="footer__copyright">
-            Completed this coding project in this course and then added
-            additional edits and modifications - by Frank Pechar.
+            This project completed along with other modifications by
+            <span> Frank Pechar. </span>
           </p>
         </div>
       </div>
