Cross browser compatibility

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
 
-  <body>
+  <body ontouchstart="">
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
@@ -496,7 +496,7 @@
             Advanced CSS and SASS.
           </p>
           <p class="footer__copyright">
-            This project completed along with other modifications by
+            This project completed along with additional modifications by
             <span> Frank Pechar. </span>
           </p>
         </div>
