--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
@@ -81,7 +84,7 @@
           </h2>
         </div>
 
-        <div class="row">
+        <div class="row about-row">
           <div class="col-1-of-2">
             <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
@@ -380,7 +383,7 @@
       </section>
 
       <section id="section-book-id" class="section-book">
-        <div class="row">
+        <div class="row book-row">
           <div class="book">
             <div class="book__form">
               <form action="#" class="form">
