--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           />
         </picture>
       </div>
-      <div class="row">
+      <div class="row footer-row">
         <div class="col-1-of-2">
           <div class="footer__navigation">
             <ul class="footer__list">
@@ -496,7 +496,7 @@
             Advanced CSS and SASS.
           </p>
           <p class="footer__copyright">
-            This project completed along with additional modifications by
+            This project completed with additional modifications by
             <span> Frank Pechar. </span>
           </p>
         </div>
