--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Copyright &copy; - Built by Jonas Schmedtmann for his online course
-            Advanced CSS and SASS.
+            Copyright &copy; - Advanced CSS/SASS Course Project by Jonas
+            Schmedtmann.
           </p>
           <p class="footer__copyright">
             This project completed with additional modifications by
