Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
 
-  <body ontouchstart="">
+  <body>
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <section id="section-tours-id" class="section-tours" id="section-tours">
+      <section id="section-tours-id" class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -508,7 +508,7 @@
         <h2 class="heading-secondary popup-heading u-margin-bottom-small">
           Start booking now
         </h2>
-        <a href="#section-tours" class="popup__close">&times;</a>
+        <a href="#section-tours-id" class="popup__close">&times;</a>
         <h3 class="heading-tertiary u-margin-bottom-small">
           Important &ndash; Please read these terms before booking
         </h3>
