Fix to enable touch for rotating cards

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <section id="section-tours-id" class="section-tours">
+      <section id="section-tours-id" class="section-tours" ontouchstart="">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
